# openkimi

./: .gitignore  README.md  model.py  pyproject.toml  test_smoke.py  todo.md  train.py
configs/: h100-batch64-compiled.json  h100-candidate-top2-mtp3.json  h100-candidate-top4-mtp3-muonclip-1h.json  h100-candidate-top4-mtp4.json  h100-fp8-current-checkpoint-optimized.json  h100-fp8-current-lm-head-optimized.json  h100-fp8-current-quack-sonic-kda-saved.json  h100-fp8-current-quack-sonic.json  h100-fp8-current-quack.json  h100-fp8-current.json  h100-smoke.json  primary.json  tiny.json
experiments/kda_sm90/: README.md  benchmark_fused_backward.py  benchmark_guarded_diagonal.py  benchmark_guarded_diagonal_cute.py  benchmark_preprocess.py  benchmark_tf32_tile_cute.py  compile_smoke.py  fused_wy_intra_triton.py  guarded_diagonal_oracle.py  patch_fla_guarded_intra.py  validate_fla_guarded_integration.py  validate_fused_backward.py
k3mini/: __init__.py  backends.py  benchmark.py  checkpoint.py  cli.py  config.py  cuda_kernels.py  data.py  evaluation.py  fp8.py  model.py  optim.py  sonic.py  tracking.py  training.py
profiles/: h100-muonclip-router-stability-2026-07-19.json  h100-sm90-2026-07-17.json  h100-sm90-checkpoint-policy-2026-07-18.json  h100-sm90-eager-bottlenecks-2026-07-17.json  h100-sm90-fp8-current-2026-07-17.json  h100-sm90-fp8-lm-head-chunk-2026-07-18.json  h100-sm90-kda-2026-07-18.json  h100-sm90-kda-backward-fusion-2026-07-19.json  h100-sm90-kda-before-guarded-integration-2026-07-19.json  h100-sm90-kda-fla-guarded-integration-2026-07-19.json  h100-sm90-kda-fla-guarded-validation-2026-07-19.json  h100-sm90-kda-fla-safe-control-2026-07-18.json  h100-sm90-kda-gate-spans-2026-07-18.json  h100-sm90-kda-gate-spans-232-2026-07-19.json  h100-sm90-kda-guarded-adversarial-232-2026-07-19.json  h100-sm90-kda-guarded-diagonal-2026-07-18.json  h100-sm90-kda-guarded-diagonal-cute-2026-07-18.json  h100-sm90-kda-guarded-diagonal-cute-bank-conflicts-2026-07-18.json  h100-sm90-kda-guarded-diagonal-cute-channel-half-2026-07-19.json  h100-sm90-kda-guarded-diagonal-cute-channel-half-reverse-2026-07-19.json  h100-sm90-kda-guarded-diagonal-cute-direct-epilogue-2026-07-19.json  h100-sm90-kda-guarded-diagonal-cute-exp2-2026-07-18.json  h100-sm90-kda-guarded-diagonal-cute-fallback-diagonal-2026-07-19.json  h100-sm90-kda-guarded-diagonal-cute-fallback-mixed-2026-07-19.json  h100-sm90-kda-guarded-diagonal-cute-gate-cache-2026-07-19.json  h100-sm90-kda-guarded-diagonal-cute-gate-cache-ncu-2026-07-19.json  h100-sm90-kda-guarded-diagonal-cute-swizzle-2026-07-18.json  h100-sm90-kda-guarded-fla-tf32x3-2026-07-19.json  h100-sm90-kda-guarded-fla-tf32x3-threshold232-2026-07-19.json  h100-sm90-kda-guarded-midpoint-2026-07-18.json  h100-sm90-kda-guarded-real-model-threshold-sweep-2026-07-19.json  h100-sm90-kda-intra-chunk-blocked-full-step-2026-07-19.json  h100-sm90-kda-intra-chunk-blocked-full-step-after-2026-07-19.json  h100-sm90-kda-intra-chunk-blocked-real-model-2026-07-19.json  h100-sm90-kda-intra-chunk-blocked-w2-b2-2026-07-19.json  h100-sm90-kda-intra-chunk-blocked-w4-b2-2026-07-19.json  h100-sm90-kda-intra-chunk-control-full-step-2026-07-19.json  h100-sm90-kda-intra-chunk-exact-b2-2026-07-19.json  h100-sm90-kda-pinned-fork-2026-07-19.json  h100-sm90-kda-pinned-fork-benchmark-2026-07-19.json  (+8 more)
scripts/: benchmark_expert_backends.py  benchmark_kda_backends.py  benchmark_loss_backends.py  bootstrap_h100.sh  install_quack_isolated.sh  install_sonic_isolated.sh  profile_h100_step.py  profile_kda_gate_spans.py  run_with_quack.sh  run_with_sonic.sh  sonic_sitecustomize.py
tests/: conftest.py  test_backends.py  test_checkpoint_training.py  test_data.py  test_h100_parity.py  test_kda_gate_spans.py  test_kda_guarded_diagonal.py  test_kda_guarded_integration.py  test_model.py  test_platforms.py  test_router.py
(+6 files in other folders)
