[project]
name = "k3-mini"
version = "0.1.0"
description = "Public-faithful KDA + Block AttnRes + LatentMoE mini-pretraining system"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "datasets>=4.0.0,<5",
  "huggingface-hub>=0.33.0,<2",
  "numpy>=1.26,<3",
  "tokenizers>=0.21.0,<1",
  "torch==2.7.0",
]

[project.optional-dependencies]
cuda = [
  "flash-linear-attention[cuda] @ git+https://github.com/fla-org/flash-linear-attention.git@ccb0ff944cbff035fa59ac47a4cc8fd2e079bb17 ; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "grouped-gemm==0.3.0 ; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "megablocks @ git+https://github.com/databricks/megablocks.git@952db33d6eac334d22c61e47a0d5d41446298784 ; sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<10",
  "ruff>=0.12,<1",
]

[project.scripts]
k3-mini = "k3mini.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["k3mini"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
required-version = ">=0.8"

[tool.uv.extra-build-dependencies]
megablocks = ["torch==2.7.0"]
grouped-gemm = ["torch==2.7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "network: requires Hugging Face network access",
  "gpu: requires an NVIDIA GPU and CUDA extras",
  "mps: requires Apple Metal",
]

[tool.ruff]
target-version = "py311"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
